@@ -1,5 +1,5 @@
 # Automatically generated file
-# Dist::Zilla::Plugin::Author::SKIRMESS::RepositoryBase 0.016
+# Dist::Zilla::Plugin::Author::SKIRMESS::RepositoryBase 0.017
 
 --maximum-line-length=0
 --break-at-old-comma-breakpoints
